# Football

./: .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  CMakePresets.json  GITHUB_PUSH_GUIDE.md  MIGRATION_NOTES.md  QUICKSTART_GUI.md  README.md  main.cpp
Core/CauTrucDuLieu/: DanhSachLienKet.h  HangDoi.h  MangDong.h  Ngan.h  NgayGio.cpp  NgayGio.h  NgayThang.cpp  NgayThang.h  ThoiGian.cpp  ThoiGian.h
Core/Models/: ConNguoi.cpp  ConNguoi.h  DatSan.cpp  DatSan.h  DichVu.cpp  DichVu.h  DichVuDat.cpp  DichVuDat.h  DoUong.cpp  DoUong.h  KhachHang.cpp  KhachHang.h  KhungGio.cpp  KhungGio.h  NguoiDung.cpp  NguoiDung.h  NhanVien.cpp  NhanVien.h  QuanTriVien.cpp  QuanTriVien.h  San.cpp  San.h  ThanhToan.cpp  ThanhToan.h  ThanhToanChuyenKhoan.cpp  ThanhToanChuyenKhoan.h  ThanhToanThe.cpp  ThanhToanThe.h  ThanhToanTienMat.cpp  ThanhToanTienMat.h  ThietBi.cpp  ThietBi.h
Core/QuanLy/: BackupManager.cpp  BackupManager.h  FileManager.cpp  FileManager.h  HeThongQuanLy.cpp  HeThongQuanLy.h  QuanLyDatSan.cpp  QuanLyDatSan.h  QuanLyDichVu.cpp  QuanLyDichVu.h  QuanLyKhachHang.cpp  QuanLyKhachHang.h  QuanLySan.cpp  QuanLySan.h  QuanLyThanhToan.cpp  QuanLyThanhToan.h
Core/ThongKe/: ThongKe.cpp  ThongKe.h  ThongKeDoanhThu.cpp  ThongKeDoanhThu.h  ThongKeKhachHang.cpp  ThongKeKhachHang.h
Core/ThuatToan/: BinarySearchTree.h  HashTable.h  MergeSort.h  QuickSort.h
Core/Utils/: FileHelper.h
Data/: .gitignore
Docs/: BUILD.md  COMMIT_TEMPLATE.md  QT6_GUI_BUILD_GUIDE.md  QT_PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  STATUS.md  TIMELINE_BOOKING_GUIDE.md  UI_README.md  WEEK1_SUMMARY.md  WEEK2_SUMMARY.md  WEEK3_SUMMARY.md  WEEK4_COMPLETE.md  WEEK4_QUICKREF.md  WEEK4_SUMMARY.md  WEEK5_COMPLETE.md  WEEK5_PLAN.md  WEEK6_PLAN.md
UI/: MainWindow.cpp  MainWindow.h
UI/Pages/: BookingPage.cpp  BookingPage.h  CustomerPage.cpp  CustomerPage.h  DashboardPage.cpp  DashboardPage.h  FieldManagementPage.cpp  FieldManagementPage.h  PaymentPage.cpp  PaymentPage.h  ServicePage.cpp  ServicePage.h  StaffPage.cpp  StaffPage.h  StatisticsPage.cpp  StatisticsPage.h
UI/Resources/: resources.qrc
UI/Resources/styles/: main.qss
UI/Widgets/: BookingDialog.cpp  BookingDialog.h  CustomTable.cpp  CustomTable.h  SidebarButton.cpp  SidebarButton.h  StatsCard.cpp  StatsCard.h  TimelineSlot.cpp  TimelineSlot.h
